--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
 
     runtimeOnly 'com.h2database:h2'
+    implementation 'org.redisson:redisson-spring-boot-starter:3.16.0'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
